Version 1.0b To be released
===========================
- Added CWebServiceAction.serviceOptions (Qiang)
- Added CAPTCHA to application generated by yiic webapp (Qiang)
- Enabled CHtml::activeXXX to deal with multirow input (Qiang)
- Fixed issue #7: typo in CWebUser.id implementation (Qiang)
- Changed the default behavior of CWebServiceAction to serve WSDL (Qiang)
- Removed getIsNewRecord and setIsNewRecord methods from CActiveRecord.
  Added CActiveRecord.isNewRecord property. (Qiang)
- Implemented view renderer feature so that customized view template may be used. (Qiang)
- Added CFlexWidget (Qiang)
- Added CWebServiceAction.classMap (Qiang)
- Added Phone Book demo (Qiang)

Version 1.0a October 5, 2008
=============================
Initial release